fix(Table): fix issues with printable gap width, fix issues with async callbacks, fix issues with spacing between modules

--- a/addons/Table/src/style.css
+++ b/addons/Table/src/style.css
@@ -49,6 +49,10 @@
 .printable_addon_Table .table-addon-wrapper .printable_gap {
     border-bottom: 1px solid;
 }
+.printable_addon_Table .table-addon-wrapper .printable_math_gap {
+    margin: 1px 5px;
+    padding: 0 5px;
+}
 
 .printable_addon_Table .table-addon-wrapper .printable_gap_correct::after {
     content: " \2714";
